# Robotics476

./: Readme.txt
Robotics476/: Readme.txt
Robotics476/Final Robot/: Final Robot Demo Video Link.txt  Final_Robot_Teleop_Control.h
Robotics476/OpenCV/: cannyfilter.py  morphfilter.py
Robotics476/ROS/Last Day Classwork/: Romi-NoRpi-Debug_teleop.ino
Robotics476/ROS/arduino_bridge_tests/: CMakeLists.txt  package.xml
Robotics476/ROS/arduino_bridge_tests/src/: DRV8835_basic_code.cpp  imu_data_read.cpp  motor_control_tele.cpp  servo_control.cpp
Robotics476/ROS/hello_world/: CMakeLists.txt  package.xml
Robotics476/ROS/hello_world_py/: CMakeLists.txt  package.xml
Robotics476/ROS/hello_world_py/src/: simple_HW.py
Robotics476/ROS/helloworld/: CMakeLists.txt  CMakeLists_org.txt  package.xml
Robotics476/ROS/helloworld/firmware/: CMakeLists.txt
Robotics476/ROS/minimal_nodes/: minimal_nodes_msg.csv
Robotics476/ROS/ros_pubsub_tutorial/: CMakeLists.txt  package.xml
Robotics476/ROS/ros_pubsub_tutorial/src/: listener.cpp  talker.cpp
Robotics476/ROS/turtlesim_cleaner/: CMakeLists.txt
Robotics476/ROS/turtlesim_cleaner_cpp/: CMakeLists.txt  Readme.txt  package.xml
Robotics476/ROS/turtlesim_cleaner_cpp/src/: turtlesim_cleaner_cpp_node.cpp
Robotics476/ROS/turtlesim_cleaner_py/: CMakeLists.txt  package.xml
Robotics476/Robot Testing/: Testing_for_Straight.ino
Robotics476/Robot Testing/Blink/: Blink.ino
Robotics476/Robot Testing/RomiPi-master/RomiPi-master/Arduino/Romi-NoRpi-Debug/: Romi-NoRpi-Debug.ino
